--- a/src/scenes/App/components/NavBar/LogoutChip/styles.scss
+++ b/src/scenes/App/components/NavBar/LogoutChip/styles.scss
@@ -1,5 +1,6 @@
 .logout {
   button {
+    width: 8.25rem;
     text-decoration: none;
     color: white;
   }
