--- a/src/scenes/App/components/NavBar/styles.scss
+++ b/src/scenes/App/components/NavBar/styles.scss
@@ -9,7 +9,7 @@
 
   .bottom-chips {
     display: flex;
-    align-items: flex-end;
+    flex-direction: column;
     justify-content: space-between;
     position: absolute;
     left: 0;
